--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
     "expo": "~52.0.3",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.2",
+    "expo-device": "~7.0.1",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.2",
@@ -32,6 +34,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.2",
     "expo-web-browser": "~14.0.0",
+    "firebase": "^11.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
