--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.2",
     "expo-web-browser": "~14.0.0",
-    "firebase": "^11.0.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "firebase": "^11.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-native": "0.76.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
